[package]
name = "walle_mqtt_protocol"
version = "0.1.14"
edition = "2021"
description = "一个mqtt报文解析库"
license = "Apache-2.0"
keywords = ["MQTT"]
authors = ["Walle_Lee"]
repository = "https://github.com/Firoly-Li/walle_mqtt_protocol"

[dependencies]
thiserror = "1.0.61"
anyhow = "1.0.86" # 错误处理
bytes = "1.6.0"
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
tracing = "0.1.40" # 日志处理