[package]
name = "walle_mqtt_protocol"
version = "0.1.15"
edition = "2024"
description = "一个mqtt报文解析库"
license = "Apache-2.0"
keywords = ["MQTT"]
authors = ["Walle_Lee"]
repository = "https://github.com/Firoly-Li/walle_mqtt_protocol"

[dependencies]
thiserror = "2"
anyhow = "1.0.97" # 错误处理
bytes = { version = "1.10.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
tracing = "0.1.41" # 日志处理